# keebfont

./: .gitignore  Cozette.bdf  Cozette_filtered.bdf  Dockerfile  Makefile  README.md  bitmapfont2otb  build.py  convert_font_type.py  pyproject.toml
.github/workflows/: docker-image.yml
src/: 12x26.bdf  6x13.bdf  6x13B.bdf  6x13O.bdf  Cozette.sfd  Keebglyphs.sfd
tools/: extract_glyph.py  scale_bdf.py
